RESOLVED FIXED232631
Crash under WebPage::sendCOEPCORPViolation()
https://bugs.webkit.org/show_bug.cgi?id=232631
Summary Crash under WebPage::sendCOEPCORPViolation()
Chris Dumez
Reported 2021-11-02 10:34:08 PDT
Crash under WebPage::sendCOEPCORPViolation().
Attachments
Patch (3.61 KB, patch)
2021-11-02 10:36 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-11-02 10:34:16 PDT
Chris Dumez
Comment 2 2021-11-02 10:36:21 PDT
EWS
Comment 3 2021-11-02 13:44:42 PDT
Committed r285179 (243812@main): <https://commits.webkit.org/243812@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 443107 [details].
Note You need to log in before you can comment on or make changes to this bug.