Crash under WebPage::sendCOEPCORPViolation() https://bugs.webkit.org/show_bug.cgi?id=232631 <rdar://84919898>

Reviewed by Alex Christensen.

Add missing null checks for the frame after calling `WebProcess::singleton().webFrame(frameID)`.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::sendCOEPPolicyInheritenceViolation):
(WebKit::WebPage::sendCOEPCORPViolation):
(WebKit::WebPage::sendViolationReportWhenNavigatingToCOOPResponse):
(WebKit::WebPage::sendViolationReportWhenNavigatingAwayFromCOOPResponse):



Canonical link: https://commits.webkit.org/243812@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285179 268f45cc-cd09-0410-ab3c-d52691b4dbfc